infra/etapa_2/main.tf
terraform {
  required_providers {
    aws = {
        source = "hashicorp/aws"
        version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = var.aws_region
}

#VPC:
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
}
resource "aws_subnet" "public" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = true
}
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
}
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
}
resource "aws_route_table_association" "public" {
  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

#Grupo de seguridad:
resource "aws_security_group" "main" {
  name = "${var.project_name}-sg"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# EC2:
data "aws_ami" "amazon_linux" {
  most_recent = true
  owners = ["amazon"]
  filter {
    name = "name"
    values = ["al2023-ami-*-x86_64"]
  }
}
resource "aws_instance" "db" {
  ami = data.aws_ami.amazon_linux.id
  instance_type = "t3.micro"
  subnet_id = aws_subnet.public.id
  vpc_security_group_ids = [aws_security_group.main.id]
  key_name = var.key_pair_name
  
  user_data = <<-EOF
                #!/bin/bash
                yum update -y
                yum install -y docker
                systemctl start docker
                systemctl enable docker

                docker run -d \
                --name mysql \
                -e MYSQL_ROOT_PASSWORD=${var.db_password} \
                -e MYSQL_DATABASE=${var.db_name} \
                -p 3306:3306 \
                mysql:8
                EOF
}

# ECS: elastic container service
resource "aws_ecs_cluster" "main" {
  name = "${var.project_name}-cluster"
}
data "aws_iam_role" "lab" {
  name = "LabRole"
}

# Task(tarea):
resource "aws_ecs_task_definition" "app" {
  family = "${var.project_name}-app"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu = "1024"
  memory = "2048"
  execution_role_arn = data.aws_iam_role.lab.arn

  container_definitions = jsonencode([
    {
        name="backend"
        image="339712703939.dkr.ecr.us-east-1.amazonaws.com/devops-u2-backend:latest"
        portMappings=[
            {
                containerPort = 8080
            }
        ]
        environment =[{
            name="SPRING_DATASOURCE_URL"
            value="jdbc:mysql://${aws_instance.db.private_ip}:3306/asistencia_db"
        },{
            name="SPRING_DATASOURCE_USERNAME"
            value="root"
        },{
            name="SPRING_DATASOURCE_PASSWORD"
            value="root"
        }]
    },{
        name="frontend"
        image = "339712703939.dkr.ecr.us-east-1.amazonaws.com/devops-u2-frontend:latest"
        portMappings=[
            {
                containerPort=80
            }
        ]
        dependsOn = [
            {
                containerName="backend"
                condition="START"
            }
        ]
    }
  ])
}

#Servicio:
resource "aws_ecs_service" "app" {
  name = "app"
  cluster = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.app.arn
  launch_type = "FARGATE"
  desired_count = 1

  force_new_deployment = true

  network_configuration {
    subnets = [aws_subnet.public.id]
    security_groups = [aws_security_group.main.id]
    assign_public_ip = true
  }
}
